# orthogonal-skip-connections

./: .gitignore  README.md  pyproject.toml  requirements.txt  retraction_experiments.sh  setup.sh  sweep_runs.sh
experiments/: run_ablation.py  run_experiments.py  sweep.yaml
models/: __init__.py  basic_block.py  orthogonal_layers.py  orthogonal_resnet.py  patch.py  resnet_baseline.py  resnet_learnable_orthogonal.py  resnet_orthogonal.py  resnet_partial_orthogonal.py  resnet_random_skip.py  resnet_user_blocks.py
orthogonal_skip_connections/: __init__.py
orthogonal_skip_connections/config/: default.yaml  loss_landscape_resnet56.yaml  synthetic.yaml  validity.yaml
orthogonal_skip_connections/experiments/: construction_validity.py  construction_validity_sweep.py  loss_landscape_resnet56.py  orth_residual_synthetic_data.py  orth_to_id.py  run_experiments.py
orthogonal_skip_connections/models/: __init__.py  resnet_base.py  resnet_std.py  skip.py
orthogonal_skip_connections/train/: datamodule.py  scheduler.py  trainer.py
orthogonal_skip_connections/utils/: metrics.py  orthogonal_ops.py  wandb_process.py
paper/: orthogonal_skip_connections.tex  references.bib
tests/: test_models.py  test_orth_utils.py  test_orthogonal.py
train/: config.yaml  train.py
train/configs/: default.yaml
utils/: data.py  datasets.py  logger.py  metrics.py  orth_utils.py  orthogonal.py  plotting.py
